--- a/source/sass/main.sass
+++ b/source/sass/main.sass
@@ -1,6 +1,3 @@
-@import 'variables'
-@import 'colors'
-
 html
   box-sizing: border-box
 
@@ -43,32 +40,18 @@ q::before, q::after
   content: ''
   content: none
 
-table
-  border-collapse: collapse
-  border-spacing: 0
-
 a
   text-decoration: none
 
-p
-  margin-bottom: 11px
-  color: $gray
-
 body
-  background: $black
+  background: #000
   font-family: 'Roboto', sans-serif
   font-size: 100%
 
-@import 'typography'
-@import 'globals'
-@import 'menu'
-@import 'event'
-@import 'info'
-@import 'speakers'
-@import 'schedule'
-@import 'local'
-@import 'sponsors'
-@import 'contact'
-@import 'staff'
-@import 'acessibility'
-@import 'invert-color'
+
+.title
+
+.subtitle
+
+
+.ticket-button
