fix style to landscape orientation version

--- a/source/sass/main.sass
+++ b/source/sass/main.sass
@@ -102,3 +102,8 @@ body
       right: 0
       top: 0
       transform: rotate(180deg)
+
+
+@media screen and (orientation: landscape)
+  .subtitle
+    margin: 15px 0 30px
